Updated Plugin Loader (Better)